--- a/app/Assets/language/default.json
+++ b/app/Assets/language/default.json
@@ -362,11 +362,11 @@
 	"window-globals-instance": "Instance globals", 
 	"window-globals-instancep": "Property", 
 	"window-globals-instancen": "Name", 
-	"window-globals-movie": "Movie globals", 
+	"window-globals-movie": "Movie globals and input content", 
 	"window-globals-text": "Text", 
 	"window-globals-number": "Number", 
 	"window-globals-flag": "Flag", 
-	"window-globals-name": "Global name", 
+	"window-globals-name": "Global or input name", 
 	"window-globals-get": "get value", 
 	"window-globals-playing": "is the movie playing right now?", 
 	"window-globals-userlogged": "is there an user logged?", 
@@ -374,6 +374,10 @@
 	"window-globals-keyframe": "current keyframe number", 
 	"window-globals-areabig": "movie big dimension", 
 	"window-globals-areasmall": "movie small dimension", 
+	"window-globals-contentx": "movie actual x position", 
+	"window-globals-contenty": "movie actual y position", 
+	"window-globals-contentwidth": "movie actual width", 
+	"window-globals-contentheight": "movie actual height", 
 	"window-globals-movietitle": "movie title", 
 	"window-globals-movieid": "movie id", 
 	"window-globals-scenetitle": "scene title", 
@@ -464,6 +468,9 @@
 	"window-acinstance-collections": "Scene collections", 
 	"window-acinstance-assets": "Collection assets", 
 	"window-acinstance-cpasset": "get asset ID", 
+	"window-acinput-text": "Text input value", 
+	"window-acnumeric-text": "Numeric input value", 
+	"window-actoggle-text": "Toggle input value", 
 	
 	"window-scenenew-title": "New scene",
 	"window-scenenew-name": "Scene name", 
