--- a/server/public_html/app/assets/language/default.json
+++ b/server/public_html/app/assets/language/default.json
@@ -114,7 +114,7 @@
 	"menu-movie-open": "Open", 
 	"menu-movie-properties": "Properties", 
 	"menu-movie-users": "Users", 
-	"menu-movie-plugins": "Plugins", 
+	"menu-movie-remove": "Remove", 
 	
 	"window-login-title": "Login", 
 	"window-login-username": "Your e-mail", 
@@ -175,7 +175,7 @@
 	"window-movieprop-popup": "Movie update", 
 	"window-movieprop-popuperror": "Error while saving the movie properties. Please try again.", 
 	"window-movieprop-popupok": "The movie information was updated.", 
-	"window-movieprop-about": "About the movie", 
+	"window-movieprop-about": "About", 
 	"window-movieprop-tags": "Tags",
 	"window-movieprop-key": "Secret key (to limit content access)",
 	"window-movieprop-index": "Index scene",
@@ -200,6 +200,7 @@
 	"window-movieprop-orright": "From right", 
 	"window-movieprop-orrightkeep": "From right (keep layout)", 
 	"window-movieprop-interpolation": "Interpolation", 
+	"window-movieprop-highlight": "Mouse over highlight color (use hex 0x000000 or #000000 format - leave blank to hide highlight)", 
 	"window-movieprop-saveanim": "Save animation settings", 
 	"window-movieprop-display": "Display", 
 	"window-movieprop-bgcolor": "Background color (hex)", 
@@ -307,6 +308,25 @@
 	"window-movieprop-plavailable": "Available plugins: check the ones to activate for current movie", 
 	"window-movieprop-plbt": "Set plugins", 
 	
+	"window-movieprop-input": "Input", 
+	"window-movieprop-inputabout": "You can set movie reactions to several input methods like keyboard press. Choose a predefined behavior or use action snippet names to set.", 
+	"window-movieprop-inputsave": "Save input assignments", 
+	"window-movieprop-input-opup": "navigate up", 
+	"window-movieprop-input-opdown": "navigate down", 
+	"window-movieprop-input-opleft": "navigate left", 
+	"window-movieprop-input-opright": "navigate right", 
+	"window-movieprop-input-opnin": "navigate in", 
+	"window-movieprop-input-opnout": "navigate out", 
+	"window-movieprop-input-opsnippet": "action snippet", 
+	"window-movieprop-input-keyup": "Keyboard arrow up", 
+	"window-movieprop-input-keydown": "Keyboard arrow down", 
+	"window-movieprop-input-keyletf": "Keyboard arrow left", 
+	"window-movieprop-input-keyright": "Keyboard arrow right", 
+	"window-movieprop-input-keypup": "Keyboard page up", 
+	"window-movieprop-input-keypdown": "Keyboard page down", 
+	"window-movieprop-input-keyspace": "Keyboard space bar", 
+	"window-movieprop-input-keyenter": "Keyboard enter", 
+	
 	"window-movieprop-access": "Access", 
 	"window-movieprop-accessbt": "Set access options", 
 	"window-movieprop-accesslogin": "Require visitor login?",
@@ -332,6 +352,11 @@
 	"window-movieusers-ownerok": "The movie was correctly transfered to another user.", 
 	"window-movieusers-ownernomail": "The provided e-mail address does not belong to an active user.", 
 	"window-movieusers-ownererror": "Error while transfering the movie. Please try again.", 
+	
+	"window-movieremove-title": "Remove movie", 
+	"window-movieremove-about": "Check out the list of your movies below. You can remove any of them. Attention: you won't be able to revert this action - please export the movie before removing it so you can import it again if necessary.", 
+	"window-movieremove-button": "Remove the selected movie", 
+	"window-movieremove-confirm": "If you remove the selected movie you won't be able to recover it. Please be sure to export it before so you can import it again if needed. Are you sure you want to remove this movie?", 
 	
 	"window-movieplugin-title": "Movie plugins", 
 	"window-movieplugin-enable": "Enable this plugin on current movie", 
@@ -469,6 +494,8 @@
 	"window-acinstance-assets": "Collection assets", 
 	"window-acinstance-cpasset": "get asset ID", 
 	"window-acinput-text": "Text input value", 
+	"window-acnumeric-text": "Numeric input value", 
+	"window-actoggle-text": "Toggle input value", 
 	
 	"window-scenenew-title": "New scene",
 	"window-scenenew-name": "Scene name", 
@@ -1017,6 +1044,20 @@
 	"window-visitors-cors-btadd": "Add domain",
 	"window-visitors-cors-errorrm": "Error while removing the domain. Please try again.",
 	"window-visitors-cors-erroradd": "Error while adding the domain. Please try again.",
+	
+	"tooltip-action-copy": "copy the current code to clipboard", 
+	"tooltip-action-scene": "movie and scene navigation actions", 
+	"tooltip-action-instance": "instance manipulation actions", 
+	"tooltip-action-variables": "variable manipulation and condition actions", 
+	"tooltip-action-data": "data handling and input actions", 
+	"tooltip-action-plus": "additional actions like system and timers", 
+	"tooltip-action-plugin": "actions provided by plugins", 
+	"tooltip-movie-remove": "only available when no movie is loaded", 
+	"tooltip-movie-nolevel": "your access level doesn't allow movie handling", 
+	"tooltip-movie-noowner": "you are not the owner of the current movie", 
+	"tooltip-movie-nomovie": "no movie loaded", 
+	"tooltip-movie-noscene": "no scene loaded", 
+	"tooltip-movie-nomovieowner": "no movie open or you are not the owner of the current one", 
 
     "login-welcome": "Welcome to TilBuci! Please use the form below to enter the editor."
 }
