--- a/app/Assets/language/default.json
+++ b/app/Assets/language/default.json
@@ -21,6 +21,7 @@
     "leftbar-movie": "Movie",
     "leftbar-scene": "Scene",
     "leftbar-media": "Media",
+	"leftbar-narrative": "Narrative",
 	"leftbar-exchange": "Exchange",
 	"leftbar-keyframe": "Keyframes",
 	"leftbar-visitors": "Visitors",
@@ -326,6 +327,10 @@
 	"window-movieprop-input-keypdown": "Keyboard page down", 
 	"window-movieprop-input-keyspace": "Keyboard space bar", 
 	"window-movieprop-input-keyenter": "Keyboard enter", 
+	"window-movieprop-input-swiperight": "Touchscreen swipe from right", 
+	"window-movieprop-input-swipeleft": "Touchscreen swipe from left", 
+	"window-movieprop-input-swipetop": "Touchscreen swipe from top", 
+	"window-movieprop-input-swipebottom": "Touchscreen swipe from bottom", 
 	
 	"window-movieprop-access": "Access", 
 	"window-movieprop-accessbt": "Set access options", 
@@ -383,6 +388,11 @@
 	"window-actions-cancel": "Cancel", 
 	"window-actions-close": "Close", 
 	
+	"window-actions-block": "New action block", 
+	"window-actions-blockgroups": "Action groups", 
+	"window-actions-blockavailable": "Available actions", 
+	"window-actions-blockcreate": "Create action block", 
+	
 	"window-globals-general": "General globals", 
 	"window-globals-instance": "Instance globals", 
 	"window-globals-instancep": "Property", 
@@ -436,7 +446,7 @@
 	"window-acvariable-create": "create action", 
 	"window-acvariable-show": "show action", 
 	"window-globals-showaction": "Action/value", 
-	"window-acvariable-title": "Variable actions", 
+	"window-acvariable-title": "Variable actions and conditions", 
 	"window-acvariable-list": "Avaliable variable-related actions and conditions", 
 	
 	"window-acdata-title": "Data and input", 
@@ -580,6 +590,14 @@
 	"menu-keyframe-remove": "Remove current", 
 	"menu-keyframe-manage": "Manage", 
 	"menu-keyframe-addok": "New keyframe add.", 
+	
+	"menu-narrative-title": "Narrative", 
+	"menu-narrative-protagonists": "Protagonists", 
+	"menu-narrative-characters": "Characters", 
+	"menu-narrative-dialogues": "Dialogues", 
+	"menu-narrative-foes": "Foes", 
+	"menu-narrative-inventory": "Inventory", 
+	"menu-narrative-skills": "Skills", 
 	
 	"window-kfmanage-title": "Scene keyframes",
 	"window-kfmanage-keyframes": "Keyframes",
@@ -1045,6 +1063,38 @@
 	"window-visitors-cors-errorrm": "Error while removing the domain. Please try again.",
 	"window-visitors-cors-erroradd": "Error while adding the domain. Please try again.",
 	
+	"acblock-parameters": "parameters", 
+	"acblock-addbt": "add block", 
+	"acblock-then": "then", 
+	"acblock-else": "else", 
+	"acblock-tick": "on every tick", 
+	"acblock-end": "at end", 
+	"acblock-ok": "on ok", 
+	"acblock-cancel": "on cancel", 
+	"acblock-success": "on success", 
+	"acblock-error": "on error", 
+	"acblock-button": "Set action block", 
+	"acblock-valcopy": "Retrieved value", 
+	"acblock-errortitle": "Action block setting", 
+	"acblock-noparam": "A required parameter is missing: ", 
+	"acblock-paramtype": "The parameter ", 
+	"acblock-paramint": " must be an integer value.", 
+	"acblock-paramfloat": " must be a float value.", 
+	"acblock-parambool": " must be a boolean value.", 
+	
+	"acinfo-movieload": "load a movie", 
+	"acinfo-movieload-p1": "movie to load", 
+	"acinfo-sceneload": "load a scene", 
+	"acinfo-sceneload-p1": "scene to load", 
+	
+	"acinfo-intset": "set an int variable", 
+	"acinfo-intset-p1": "variable name", 
+	"acinfo-intset-p2": "value to set", 
+	"acinfo-ifintsequal": "compare two int values", 
+	"acinfo-ifintsequal-p1": "first value", 
+	"acinfo-ifintsequal-p2": "second value", 
+	
+	"tooltip-action-switch": "switch input mode", 
 	"tooltip-action-copy": "copy the current code to clipboard", 
 	"tooltip-action-scene": "movie and scene navigation actions", 
 	"tooltip-action-instance": "instance manipulation actions", 
