--- a/app/Assets/language/default.json
+++ b/app/Assets/language/default.json
@@ -1243,6 +1243,7 @@
 	"window-acbdata-title": "Data handling", 
 	"acinfo-dataevent": "register an event",
 	"acinfo-dataevent-p1": "the event name",
+	"acinfo-dataeventclear": "clear unsent events pool",
 	"acinfo-dataliststates": "list remote saved states",
 	"acinfo-dataload": "load custom data saved on the server",
 	"acinfo-dataload-p1": "the data save name",
@@ -1288,6 +1289,66 @@
 	"acinfo-inputstring": "show the string input interface", 
 	"acinfo-inputstring-p1": "string variable to receive the value", 
 	"acinfo-inputstring-p2": "text to display on input window", 
+	"acinfo-inputadd": "add a text input to the screen", 
+	"acinfo-inputadd-p1": "the input name", 
+	"acinfo-inputadd-p2": "x position", 
+	"acinfo-inputadd-p3": "y position", 
+	"acinfo-inputadd-p4": "width (height is automatic)", 
+	"acinfo-inputadd-p5": "placeholder text (optional)", 
+	"acinfo-inputplace": "set a text input size and position", 
+	"acinfo-inputplace-p1": "the input name", 
+	"acinfo-inputplace-p2": "x position", 
+	"acinfo-inputplace-p3": "y position", 
+	"acinfo-inputplace-p4": "width (height is automatic)", 
+	"acinfo-inputremove": "remove a text input", 
+	"acinfo-inputremove-p1": "the input name", 
+	"acinfo-inputremoveall": "remove all text inputs", 
+	"acinfo-inputsettext": "set the content of a text input", 
+	"acinfo-inputsettext-p1": "the input name", 
+	"acinfo-inputsettext-p2": "the text to set",
+	"acinfo-inputsetpassword": "set a text input password mask display", 
+	"acinfo-inputsetpassword-p1": "the input name", 
+	"acinfo-inputsetpassword-p2": "show as password?",	
+	"acinfo-inputaddnumeric": "add a numeric input to the screen", 
+	"acinfo-inputaddnumeric-p1": "the input name", 
+	"acinfo-inputaddnumeric-p2": "the initial value", 
+	"acinfo-inputaddnumeric-p3": "minimum value", 
+	"acinfo-inputaddnumeric-p4": "maximum value", 
+	"acinfo-inputaddnumeric-p5": "the increase/decrease step", 
+	"acinfo-inputplacenumeric": "set a numeric input size and position", 
+	"acinfo-inputplacenumeric-p1": "the input name", 
+	"acinfo-inputplacenumeric-p2": "x position", 
+	"acinfo-inputplacenumeric-p3": "y position", 
+	"acinfo-inputplacenumeric-p4": "width (height is automatic)", 
+	"acinfo-inputremovenumeric": "remove a numeric input", 
+	"acinfo-inputremovenumeric-p1": "the input name", 
+	"acinfo-inputremoveallnumerics": "remove all numeric inputs", 
+	"acinfo-inputsetnumeric": "set a numeric input value", 
+	"acinfo-inputsetnumeric-p1": "the input name", 
+	"acinfo-inputsetnumeric-p2": "the new value", 
+	"acinfo-inputsetnumericbounds": "set a numeric input properties", 
+	"acinfo-inputsetnumericbounds-p1": "the input name", 
+	"acinfo-inputsetnumericbounds-p2": "minimum value", 
+	"acinfo-inputsetnumericbounds-p3": "maximum value", 
+	"acinfo-inputsetnumericbounds-p4": "the increase/decrease step", 
+	"acinfo-inputaddaddtoggle": "add a toggle input to the screen", 
+	"acinfo-inputaddaddtoggle-p1": "the input name", 
+	"acinfo-inputaddaddtoggle-p2": "initially selected?", 
+	"acinfo-inputaddaddtoggle-p3": "x position", 
+	"acinfo-inputaddaddtoggle-p4": "y position", 
+	"acinfo-inputplacetoggle": "place a toggle input on screen", 
+	"acinfo-inputplacetoggle-p1": "the input name", 
+	"acinfo-inputplacetoggle-p2": "x position", 
+	"acinfo-inputplacetoggle-p3": "y position", 
+	"acinfo-inputremovetoggle": "remove a toggle input", 
+	"acinfo-inputremovetoggle-p1": "the input name", 
+	"acinfo-inputrremovealltoggles": "remove all toggle inputs", 
+	"acinfo-inputsettoggle": "set a toggle input value", 
+	"acinfo-inputsettoggle-p1": "the input name", 
+	"acinfo-inputsettoggle-p2": "the new value", 
+	"acinfo-inputinverttoggle": "invert a toggle input value", 
+	"acinfo-inputinverttoggle-p1": "the input name", 
+	
 	
 	"window-acbinstance-title": "Instance manipulation", 
 	"acinfo-instancenext": "load next collection element", 
@@ -1456,6 +1517,13 @@
 	"acinfo-cssclear": "clear CSS styles set",
 	"acinfo-cssset": "set CSS styles",
     "acinfo-cssset-p1": "the stylesheet to load",
+	"acinfo-systemcloseembed": "close the HTML5 embed display",
+	"acinfo-systemsembedplace": "set the size/position of embed html5 content",
+    "acinfo-systemsembedplace-p1": "x position",
+	"acinfo-systemsembedplace-p2": "y position",
+	"acinfo-systemsembedplace-p3": "width",
+	"acinfo-systemsembedplace-p4": "height",
+	"acinfo-systemembedreset": "reset the HTML5 embed content size/position",
 	
 	"window-acbtimer-title": "Timers", 
 	"acinfo-timerclear": "stop a timer",
@@ -1512,7 +1580,48 @@
 	"acinfo-ifstringstartswith": "check if a string starts with another one",
     "acinfo-ifstringstartswith-p1": "the original string",
 	"acinfo-ifstringstartswith-p2": "the string to look for",
+	"acinfo-ifstringemail": "check if a string is a valie e-mail address",
+    "acinfo-ifstringemail-p1": "the string to check",
 	
+	"window-acbdebug-title": "Debug (plugin)", 
+	"acinfo-debugtrace": "show a text on browser console", 
+	"acinfo-debugtrace-p1": "the text do show (you may add more)", 
+	"acinfo-debugtracebools": "show boolean variables on browser console", 
+	"acinfo-debugtraceints": "show integer variables on browser console", 
+	"acinfo-debugtracefloats": "show float variables on browser console", 
+	"acinfo-debugtracestrings": "show string variables on browser console", 
+	"acinfo-debuginfoshow": "show the debug information window", 
+	"acinfo-debuginfohide": "hide the debug information window", 
+	
+	"window-acbshare-title": "Social share (plugin)", 
+	"acinfo-sharefacebook": "share on Facebook", 
+	"acinfo-sharelinkedin": "share on LinkedIn", 
+	"acinfo-sharepinterest": "share on Pinterest", 
+	"acinfo-sharereddit": "share on Reddit", 
+	"acinfo-sharex": "share on X", 
+	
+	"window-acbanalytics-title": "Google Analytics (plugin)", 
+	"acinfo-analyticsevent": "register a custom event", 
+	"acinfo-analyticsevent-p1": "the event name", 
+	"acinfo-analyticsevent-p2": "the event description", 
+	
+	"window-acbserver-title": "Server data processing (plugin)", 
+	"acinfo-callprocess": "send data for server processing", 
+	"acinfo-callprocess-p1": "the request URL", 
+	"acinfo-callprocess-p2": "string data to send (you may add more)", 
+	"acinfo-callsdprocess": "send data for processing on player same domain", 
+	"acinfo-callsdprocess-p1": "the request URL", 
+	"acinfo-callsdprocess-p2": "string data to send (you may add more)", 
+	"acinfo-callurl": "send a GET request to an URL", 
+	"acinfo-callurl-p1": "the request URL", 
+	"acinfo-callurl-p2": "string variable to receive the result (optional)", 
+	
+	"window-acboverlay-title": "Overlay content (plugin)", 
+	"acinfo-overlayshow": "display content on overlay frame", 
+	"acinfo-overlayshow-p1": "the content URL to load", 
+	"acinfo-overlayshow-p2": "overlay display title (optional)", 
+	"acinfo-overlayshow-p3": "add additional information to overlay URL?", 
+	"acinfo-overlayshow-p4": "additional informaiton to send (may add more)", 
 	
 	"tooltip-action-switch": "switch input mode", 
 	"tooltip-action-copy": "copy the current code to clipboard", 
