--- a/server/public_html/app/assets/language/default.json
+++ b/server/public_html/app/assets/language/default.json
@@ -21,7 +21,7 @@
     "leftbar-movie": "Movie",
     "leftbar-scene": "Scene",
     "leftbar-media": "Media",
-	"leftbar-narrative": "Narrative",
+	"leftbar-contraptions": "Contraptions",
 	"leftbar-exchange": "Exchange",
 	"leftbar-keyframe": "Keyframes",
 	"leftbar-visitors": "Visitors",
@@ -591,13 +591,9 @@
 	"menu-keyframe-manage": "Manage", 
 	"menu-keyframe-addok": "New keyframe add.", 
 	
-	"menu-narrative-title": "Narrative", 
-	"menu-narrative-protagonists": "Protagonists", 
-	"menu-narrative-characters": "Characters", 
-	"menu-narrative-dialogues": "Dialogues", 
-	"menu-narrative-foes": "Foes", 
-	"menu-narrative-inventory": "Inventory", 
-	"menu-narrative-skills": "Skills", 
+	"menu-contraptions-title": "Contraptions", 
+	"menu-contraptions-menus": "Menus", 
+	"menu-contraptions-dialogues": "Dialogues", 
 	
 	"window-kfmanage-title": "Scene keyframes",
 	"window-kfmanage-keyframes": "Keyframes",
