--- a/app/Assets/language/default.json
+++ b/app/Assets/language/default.json
@@ -116,6 +116,8 @@
 	"menu-movie-properties": "Properties", 
 	"menu-movie-users": "Users", 
 	"menu-movie-remove": "Remove", 
+	"menu-movie-player": "Open in player", 
+	"menu-movie-navigation": "Navigation sequences", 
 	
 	"window-login-title": "Login", 
 	"window-login-username": "Your e-mail", 
@@ -370,6 +372,22 @@
 	"window-movieplugin-save": "Save this plugin settings", 
 	"window-movieplugin-saveerror": "Error while saving the plugin configuration. Please try again.", 
 	"window-movieplugin-saveok": "The plugin configuration was saved successfully.", 
+	
+	"window-movieseq-title": "Navigation sequences",
+	"window-movieseq-scenes": "Available scenes",
+	"window-movieseq-sequence": "Sequence",
+	"window-movieseq-add": "Add scene to sequence", 
+	"window-movieseq-clear": "Clear sequence", 
+	"window-movieseq-remove": "Remove scene", 
+	"window-movieseq-direction": "Sequence direction", 
+	"window-movieseq-dirx": "left / right", 
+	"window-movieseq-diry": "up / down", 
+	"window-movieseq-dirz": "in / out", 
+	"window-movieseq-connect": "Connect the first and the last scenes?", 
+	"window-movieseq-create": "Create the navigation sequence", 
+	"window-movieseq-nolist": "Error while recovering the scenes list.",
+	"window-movieseq-error": "Error while creating the navigation sequence.",
+	"window-movieseq-created": "The navigation sequence was created.",
 	
 	"menu-scene-title": "Scene", 
 	"menu-scene-new": "New", 
