--- a/app/Assets/language/default.json
+++ b/app/Assets/language/default.json
@@ -118,6 +118,7 @@
 	"menu-movie-remove": "Remove", 
 	"menu-movie-player": "Open in player", 
 	"menu-movie-navigation": "Navigation sequences", 
+	"menu-movie-notes": "Design notes", 
 	
 	"window-login-title": "Login", 
 	"window-login-username": "Your e-mail", 
@@ -359,6 +360,11 @@
 	"window-movieusers-ownerok": "The movie was correctly transfered to another user.", 
 	"window-movieusers-ownernomail": "The provided e-mail address does not belong to an active user.", 
 	"window-movieusers-ownererror": "Error while transfering the movie. Please try again.", 
+	"window-movieusers-lock": "Locked scenes", 
+	"window-movieusers-unlock": "Unlock all scenes", 
+	"window-movieusers-unlockabout": "When an user opens a scene, it is locked to prevent other userd to edit it at the same time. The scene remains locked for 15 minutes - this period is renewed each time the scene is saved. As the movie owner you can force the unlock of all scenes at any time.", 
+	"window-movieusers-erlock": "Error while unlocking the scenes.", 
+	"window-movieusers-oklock": "All movie scenes were unlocked.", 
 	
 	"window-movieremove-title": "Remove movie", 
 	"window-movieremove-about": "Check out the list of your movies below. You can remove any of them. Attention: you won't be able to revert this action - please export the movie before removing it so you can import it again if necessary.", 
@@ -547,6 +553,7 @@
 	"window-sceneopen-error": "The scene list could not be open. Please try again.", 
 	"window-sceneopen-noscenes": "No scenes found to open.", 
 	"window-sceneopen-button": "Open the selected scene", 
+	"window-sceneopen-locked": "The selected scene is open by another user.", 
 	
 	"window-sceneversion-title": "Scene versions",
 	"window-sceneversion-wait": "Please wait while the scene list is loaded...", 
@@ -670,17 +677,21 @@
 	"window-exchimport-impok": "The movie ZIP file was imported!",
 	
 	"window-exchsite-title": "Export movie as a website",
-	"window-exchsite-about": "When you export the current movie as a website, TilBuci will create a ZIP file with the website contents. Just unzip all files into a folder of your site and you're ready to go! Notice that features that require server interaction, like visitor login, won't be available from the exported site. When creating your site, plase be patient since the process may take some time.",
+	"window-exchsite-about": "When you export the current movie as a website, TilBuci will either save it at the /sites folder of your installation or create a ZIP file with the website contents. Just access the exported URL or unzip all files into a folder of your site and you're ready to go! Notice that features that require server interaction, like visitor login, won't be available from the exported ZIP content unless the site URL is add to the CORS list of this installation visitors setup. When creating your site, plase be patient since the process may take some time.",
 	"window-exchsite-button": "Create the website files",
 	"window-exchsite-mode": "Website render mode",
 	"window-exchsite-webgl": "WebGL (recommended)",
 	"window-exchsite-dom": "HTML DOM",
-	"window-exchsite-sitemap": "Create a sitemap? If you want to create a sitemap file for your website, indicate the address from where it will be accessed.",
+	"window-exchsite-sitemap": "Create a sitemap? If you want to create a sitemap file for your website, indicate the address from where it will be accessed. The provided address will be automatically add to the enabled CORS list.",
 	"window-exchsite-error": "Error while exporting your website.", 
-	"window-exchsite-ok": "Your website was exported. Please wait for the download to begin. You can also download the zip file from  the export folder of your TulBuci installation server.", 
+	"window-exchsite-ok": "Your website was exported. Please wait for the download to begin. You can also download the zip file from  the export folder of your TilBuci installation server.", 
+	"window-exchsite-location": "Export to",
+	"window-exchsite-locsite": "/sites folder",
+	"window-exchsite-loczip": "zip file",
+	"window-exchsite-siteok": "Your website was exported. You can access it at [URL].", 
 	
 	"window-exchpwa-title": "Export movie as a PWA application",
-	"window-exchpwa-about": "To export your movie as a Progressive Web Application, inform all the fields of current window and click the export button. TilBuci will create a zip file that you must uncompress into your webserver. Remember that the site must run from HTTPS to enable the PWA features. You can set the favicon image at the movie properties window - you MUST use a 512x512 pixels PNG file. The PWA export process may take some time. After that the download will start automatically. If you are updating a previously exported PWA app, just override the previous content with the newly exported one.",
+	"window-exchpwa-about": "To export your movie as a Progressive Web Application, inform all the fields of current window and click the export button. TilBuci will either save it at the /pwa folder of your installation or create a zip file that you must uncompress into your webserver. Remember that the site must run from HTTPS to enable the PWA features. You can set the favicon image at the movie properties window - you MUST use a 512x512 pixels PNG file. The PWA export process may take some time. After that the download will start automatically. If you are updating a previously exported PWA app, just override the previous content with the newly exported one.",
 	"window-exchpwa-name": "App name", 
 	"window-exchpwa-shortname": "Shot name (12 chars max)", 
 	"window-exchpwa-language": "Language (use ISO639/1 language + - + ISO3166/1 contry code like en-US or pt-BR)", 
@@ -693,6 +704,10 @@
 	"window-exchpwa-nourl": "Pelase provide an access url starting with https://",
 	"window-exchpwa-error": "Error while exporting your PWA application.", 
 	"window-exchpwa-ok": "Your PWA application was exported. Please wait for the download to begin. You can also download the zip file from  the export folder of your TulBuci installation server.", 
+	"window-exchpwa-location": "Export to (your installation must run from HTTPS to enable the /pwa export option)",
+	"window-exchpwa-locsite": "/pwa folder",
+	"window-exchpwa-loczip": "zip file",
+	"window-exchpwa-siteok": "Your PWA was exported. You can access it at [URL].", 
 	
 	"window-exchpub-title": "Export movie for publishing services",
 	"window-exchpub-about": "You can export your creation for publishing on services like itch.io or Game Jolt. Just click the button below to export a zip file. At the services, include your creation as an HTML project. You may need to allow the service domain to communicate with this TilBuci installation to use online features like login or save states (just go to Visitors left menu and look for the CORS tab - itch.io and gamejolt.com are automatically enabled).",
@@ -1076,6 +1091,20 @@
 	"window-visitors-cors-btadd": "Add domain",
 	"window-visitors-cors-errorrm": "Error while removing the domain. Please try again.",
 	"window-visitors-cors-erroradd": "Error while adding the domain. Please try again.",
+	
+	"window-notes-title": "Design notes",
+	"window-notes-movie": "Movie guidelines",
+	"window-notes-movienotes": "Movie notes",
+	"window-notes-scenenotes": "Scene notes",
+	"window-notes-nonotes": "Error while retrieving the design notes.", 
+	"window-notes-btguidelines": "Save movie guidelines", 
+	"window-notes-bywhen": "by [AUTHOR] at [TIME]", 
+	"window-notes-nosave": "Error while saving the design note.", 
+	"window-notes-oksave": "The design note was saved.", 
+	"window-notes-btmovie": "Save movie notes", 
+	"window-notes-btscene": "Save scene notes", 
+	"window-notes-ownnotes": "Personal notes", 
+	"window-notes-btown": "Save personal notes", 
 	
 	"acblock-parameters": "parameters", 
 	"acblock-addbt": "add block", 
