--- a/server/public_html/app/assets/language/default.json
+++ b/server/public_html/app/assets/language/default.json
@@ -648,7 +648,7 @@
 	"menu-exchange-site": "Export as website", 
 	"menu-exchange-pwa": "Save PWA application", 
 	"menu-exchange-publish": "Save for publish services\n(itch.io, Game Jolt, etc)", 
-	"menu-exchange-desktop": "Create desktop app\nWindows, Linux or macOS", 
+	"menu-exchange-desktop": "Export for desktop\nWindows, Linux or macOS", 
 	"menu-exchange-cordova": "Create Android/iOS app\n(Apache Cordova project)", 
 	"menu-exchange-import": "Import a movie", 
 	
@@ -716,15 +716,13 @@
 	"window-exchpub-ok": "Your movie was exported. Please wait for the download to begin. You can also download the zip file from  the export folder of your TulBuci installation server.", 
 	
 	"window-exchdesk-title": "Save movie as a desktop app",
-	"window-exchdesk-about": "You can export your movie as a desktop application for Windows, Linux or macOS systems, just fill the form values. You can use the system.quit action to close yout application - this is important if you are creating a fullscreen or kiosk application. The desktop application export may take several minutes.",
+	"window-exchdesk-about": "You can export your movie as an ElectronJS project to create a desktop application for Windows, Linux or macOS systems, just fill the form values. You can use the system.quit action to close yout application - this is important if you are creating a fullscreen or kiosk application. After the project is creted, TilBuci will start downloading a zip file. Please check out the included readme.txt file for further instructions. Desktop applications require some movie information like the icon, the author and a description.",
 	"window-exchdesk-error": "Error while exporting your application. Please try again.",
-	"window-exchdesk-ok": "Your application was exported. Please wait for the download to begin. You can also download the zip file from the export folder of your TulBuci installation server.", 
+	"window-exchdesk-ok": "Your application was exported. Please wait for the download to begin. You can also download the zip file from the export folder of your TilBuci installation server. Please check out the included readme.txt file for further instructions.", 
 	"window-exchdesk-button": "Create the app",
-	"window-exchdesk-os": "OS platform",
-	"window-exchdesk-oswindows": "Windows (64bit)",
-	"window-exchdesk-oslinux": "Linux (64bit, tested on Ubuntu, Mint and Pop!_OS)",
-	"window-exchdesk-osmacintel": "macOS (Intel 64bit)",
-	"window-exchdesk-osmacsilicon": "macOS (Silicon)",
+	"window-exchdesk-mode": "Export mode",
+	"window-exchdesk-full": "Full Electron project",
+	"window-exchdesk-update": "Just the content update",
 	"window-exchdesk-window": "Window",
 	"window-exchdesk-windownormal": "Standard window",
 	"window-exchdesk-windowresize": "Non-resizable window",
@@ -732,8 +730,12 @@
 	"window-exchdesk-windowkiosk": "Kiosk (fullscreen, keeping focus)",
 	"window-exchdesk-width": "Window original width",
 	"window-exchdesk-height": "Window original height",
-	"window-exchdesk-aboutnw": "The desktop applications are created using nw.js (aka node-webkit).",
-	"window-exchdesk-buttonnw": "Visit the nw.js site",
+	"window-exchdesk-aboutnw": "The desktop applications are created using Electron JS.",
+	"window-exchdesk-buttonnw": "Visit the Elecntron JS site",
+	"window-exchdesk-icon": "App icon file (set at the movie properties)", 
+	"window-exchdesk-author": "App author (set at the movie properties)", 
+	"window-exchdesk-description": "App description (set at the movie properties)", 
+	"window-exchdesk-errormiss": "You must provide the author name, the description and the favicon at the movie properties window.", 
 	
 	"window-exchcord-title": "Export mobile app",
 	"window-exchcord-about": "TilBuci uses the Apache Cordova project to enable the creation of mobile apps for Android and iOS/iPadOS. If this is the first time you are creating an app for the current movie, please export the complete project. If you already have an app, select the update project below. The exported ZIP file contains further instructions about setting up the Apache Cordova and creating/distributing your application. This window form values are used only on complete project export.",
